feat: added mobile background

--- a/src/index.css
+++ b/src/index.css
@@ -3,12 +3,17 @@
 @tailwind utilities;
 
 body {
-  background: url("/bg-desktop.jpg") no-repeat top center/cover;
+  background: url("/bg-mobile.jpg") no-repeat top center/cover;
   height: 100vh;
-  overflow: hidden;
 }
 
 body * {
   font-family: 'Inter', sans-serif;
   color: white;
+}
+
+@media (min-width: 700px) {
+  body {
+    background: url("/bg-desktop.jpg") no-repeat top center/cover;
+  }
 }
